/*
 * Copyright 2010-2015 JetBrains s.r.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.jetbrains.kotlin.library.metadata;

import "core/metadata/src/metadata.proto";

option java_outer_classname = "KlibMetadataProtoBuf";
option optimize_for = LITE_RUNTIME;

message Header {
  /*
    preRelease
  */
  optional int32 flags = 1;

  // (patch << 16) + (minor << 8) + major
  optional int32 js_code_binary_version = 2 [default = 1];

  optional string package_fq_name = 3;

  optional org.jetbrains.kotlin.metadata.StringTable strings = 4;

  optional org.jetbrains.kotlin.metadata.QualifiedNameTable qualified_names = 5;

  // Annotations on the whole module
  repeated org.jetbrains.kotlin.metadata.Annotation annotation = 6;
}

message File {
  // If absent, id is the index of the file in the Files.file list
  optional int32 id = 1;

  repeated org.jetbrains.kotlin.metadata.Annotation annotation = 2;
}

message Files {
  repeated File file = 1;
}

message DescriptorUniqId {
  required int64 index = 1;
}

extend org.jetbrains.kotlin.metadata.Package {
  optional int32 package_fq_name = 171;
}

extend org.jetbrains.kotlin.metadata.Class {
  repeated org.jetbrains.kotlin.metadata.Annotation class_annotation = 170;
  optional int32 class_file = 175;
  optional DescriptorUniqId class_uniq_id = 171;
}

extend org.jetbrains.kotlin.metadata.Constructor {
  repeated org.jetbrains.kotlin.metadata.Annotation constructor_annotation = 170;
  optional DescriptorUniqId constructor_uniq_id = 172;
}

extend org.jetbrains.kotlin.metadata.Function {
  repeated org.jetbrains.kotlin.metadata.Annotation function_annotation = 170;
  optional int32 function_file = 172;
  optional DescriptorUniqId function_uniq_id = 173;
}

extend org.jetbrains.kotlin.metadata.Property {
  repeated org.jetbrains.kotlin.metadata.Annotation property_annotation = 170;
  repeated org.jetbrains.kotlin.metadata.Annotation property_getter_annotation = 177;
  repeated org.jetbrains.kotlin.metadata.Annotation property_setter_annotation = 178;
  optional org.jetbrains.kotlin.metadata.Annotation.Argument.Value compile_time_value = 173;
  optional int32 property_file = 176;
  optional DescriptorUniqId property_uniq_id = 179;
}

extend org.jetbrains.kotlin.metadata.EnumEntry {
  repeated org.jetbrains.kotlin.metadata.Annotation enum_entry_annotation = 170;
  optional int32 enum_entry_ordinal = 171;
  optional DescriptorUniqId enum_entry_uniq_id = 172;
}

extend org.jetbrains.kotlin.metadata.ValueParameter {
  repeated org.jetbrains.kotlin.metadata.Annotation parameter_annotation = 170;
  optional DescriptorUniqId value_param_uniq_id = 171;
}

extend org.jetbrains.kotlin.metadata.Type {
  repeated org.jetbrains.kotlin.metadata.Annotation type_annotation = 170;
}

extend org.jetbrains.kotlin.metadata.TypeParameter {
  repeated org.jetbrains.kotlin.metadata.Annotation type_parameter_annotation = 170;
  optional DescriptorUniqId type_param_uniq_id = 171;
}

extend org.jetbrains.kotlin.metadata.PackageFragment {
  optional Files package_fragment_files = 170;
}

extend org.jetbrains.kotlin.metadata.TypeAlias {
  // TODO repeated org.jetbrains.kotlin.metadata.Annotation type_alias_annotation = 130;
  optional DescriptorUniqId type_alias_uniq_id = 131;
}

message Classes {
  // id in StringTable
  repeated int32 class_name = 1 [packed = true];
}

message Library {
  repeated org.jetbrains.kotlin.metadata.PackageFragment package_fragment = 2;

}

message LinkDataPackageFragment {
  // Make if an index?
  required string fq_name = 1;
  required org.jetbrains.kotlin.metadata.Package package = 4;
  required LinkDataClasses classes = 5;
  required bool is_empty = 6;

  // To construct name resolver
  required org.jetbrains.kotlin.metadata.QualifiedNameTable name_table = 2;
  required org.jetbrains.kotlin.metadata.StringTable string_table = 3;
}

message LinkDataClasses {
  // Index in the QualifiedNameIndex table.
  repeated int32 class_name = 1;
  repeated org.jetbrains.kotlin.metadata.Class classes = 2;
}

message LinkDataLibrary {
  required string module_name = 1;
  repeated string package_fragment_name = 2;
  repeated string empty_package = 3;
  repeated string file = 4;
}